5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1692_1107.log
== TEST (2019-04-30 17:40:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:51:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
z=(x+y)%7
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
elif(x==0):
	if(x+y)%7==1
	print("Hoje eh domingo e o dia futuro eh segunda")
	
-- ERROR:
File "XXXX", line 10
    if(x+y)%7==1
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:51:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
z=(x+y)%7
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
elif(x==0):
	if(x+y)%7==1:
	print("Hoje eh domingo e o dia futuro eh segunda")
	
-- ERROR:
File "XXXX", line 11
    print("Hoje eh domingo e o dia futuro eh segunda")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:51:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
z=(x+y)%7
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
elif(x==0):
	if(x+y)%7==1:
		print("Hoje eh domingo e o dia futuro eh segunda")
	
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:53:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
z=(x+y)%7
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
elif(x==0):
	if((x+y)%(7)==1):
		print("Hoje eh quinta e o dia futuro eh segunda")
	
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:53:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
elif(x==0):
	if((x+y)%(7)==1):
		print("Hoje eh quinta e o dia futuro eh segunda")
	
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:54:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
elif(x==0):
	if((x+y)%(7)==1):
		print("Hoje eh quinta e o dia futuro eh segunda")
	
-- EXECUTION TIME:
0.20685
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada  9  eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:54:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
elif(x==0):
	if((x+y)%(7)==1):
		print("Hoje eh quinta e o dia futuro eh segunda")
	
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:54:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
else:
	if(x==0):
		if((x+y)%(7)==1):
			print("Hoje eh quinta e o dia futuro eh segunda")
	
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:01:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
else:
	if(x==0):
		if((x+y)%(7)==1):
			print("Hoje eh quinta e o dia futuro eh segunda")
	
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:02:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
else:
	if(x==0):
		if((x+y)%(7)==1):
			print("Hoje eh quinta e o dia futuro eh segunda")
	
-- EXECUTION TIME:
0.197731
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada  9  eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:39:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
z=x+y
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
else:
	if(x==0):
		if((z)%(7))==1:
			print("Hoje eh quinta e o dia futuro eh segunda")
	
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:41:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
z=x+y
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
else:
	if(x==4):
		if((z)%(7))==1:
			print("Hoje eh quinta e o dia futuro eh segunda")
-- OUTPUT:
A entrada  9  eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:51:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=int(input("numero     "))
y=int(input("futuro     "))
z=x+y
if(x<0)or(x>6):
	print("A entrada ",x," eh invalida")
else:
	if(x==0):
		if((z)%(7))==0:
			print("Hoje eh domingo e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh domingo e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh domingo e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh domingo e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh domingo e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh domingo e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh domingo e o dia futuro eh sabado")
	elif(x==1):
		if((z)%(7))==0:
			print("Hoje eh segunda e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh segunda e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh segunda e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh segunda e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh segunda e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh segunda e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh segunda e o dia futuro eh sabado")
	elif(x==2):
		if((z)%(7))==0:
			print("Hoje eh terca e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh terca e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh terca e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh terca e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh terca e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh terca e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh terca e o dia futuro eh sabado")
	elif(x==3):
		if((z)%(7))==0:
			print("Hoje eh quarta e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh quarta e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh quarta e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh quarta e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh quarta e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh quarta e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh quarta e o dia futuro eh sabado")
	elif(x==4):
		if((z)%(7))==0:
			print("Hoje eh quinta e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh quinta e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh quinta e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh quinta e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh quinta e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh quinta e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh quinta e o dia futuro eh sabado")
	elif(x==5):
		if((z)%(7))==0:
			print("Hoje eh sexta e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh sexta e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh sexta e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh sexta e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh sexta e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh sexta e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh sexta e o dia futuro eh sabado")
	elif(x==6):
		if((z)%(7))==0:
			print("Hoje eh sabado e o dia futuro eh domingo")
		elif((z)%(7))==1:
			print("Hoje eh sabado e o dia futuro eh segunda")
		elif((z)%(7))==2:
			print("Hoje eh sabado e o dia futuro eh terca")
		elif((z)%(7))==3:
			print("Hoje eh sabado e o dia futuro eh quarta")
		elif((z)%(7))==4:
			print("Hoje eh sabado e o dia futuro eh quinta")
		elif((z)%(7))==5:
			print("Hoje eh sabado e o dia futuro eh sexta")
		elif((z)%(7))==6:
			print("Hoje eh sabado e o dia futuro eh sabado")
-- EXECUTION TIME:
0.177128
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada  9  eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
